--- a/package.json
+++ b/package.json
@@ -47,6 +47,6 @@
     "ts-node": "^6.0.0",
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.13.0",
-    "typescript": "3.4.3"
+    "typescript": "~3.3.0"
   }
 }
