--- a/packages/luxon-date-adapter/package.json
+++ b/packages/luxon-date-adapter/package.json
@@ -34,6 +34,6 @@
   "devDependencies": {
     "rollup": "^1.7.4",
     "rollup-plugin-typescript2": "^0.20.1",
-    "typescript": "3.4.3"
+    "typescript": "~3.3.0"
   }
 }
