--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "moduleResolution": "node",
     "typeRoots": ["node_modules/@types", "src/types"],
     "paths": {
-      "@rschedule/*": ["packages/*/src"]
+      "@rschedule/*": ["packages/*/src"],
+      "@local-tests/*": ["tests/*"]
     },
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
