--- a/packages/joda-date-adapter/package.json
+++ b/packages/joda-date-adapter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rschedule/joda-date-adapter",
-  "version": "0.11.5",
+  "version": "0.11.6",
   "description": "An rSchedule DateAdapter for \"js-joda\" ZonedDateTime objects.",
   "author": "John Carroll <john.carroll.p@gmail.com>",
   "homepage": "https://gitlab.com/john.carroll.p/rschedule",
@@ -29,8 +29,8 @@
     "clean:build": "rm -rf build && rm -rf .rpt2_cache"
   },
   "peerDependencies": {
-    "@rschedule/rschedule": "^0.11.0",
-    "@js-joda/core": "^1.11.0"
+    "@js-joda/core": "^1.11.0",
+    "@rschedule/rschedule": "^0.11.0"
   },
   "devDependencies": {
     "rollup": "^1.7.4",
