--- a/packages/core/tsconfig.module.json
+++ b/packages/core/tsconfig.module.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig",
+  "extends": "./tsconfig.umd",
   "compilerOptions": {
     "target": "es2015",
     "outDir": "build/es2015",
