--- a/packages/joda-date-adapter/tsconfig.json
+++ b/packages/joda-date-adapter/tsconfig.json
@@ -5,5 +5,5 @@
     "outDir": "build/main",
     "declarationDir": "build/main"
   },
-  "include": ["src/**/*.ts"]
+  "files": ["./src/index.ts", "./src/setup/index.ts"]
 }
