--- a/packages/luxon-date-adapter/tsconfig.json
+++ b/packages/luxon-date-adapter/tsconfig.json
@@ -5,5 +5,5 @@
     "outDir": "build/umd",
     "declarationDir": "build/umd"
   },
-  "include": ["./src/**/*.ts"]
+  "files": ["./src/index.ts", "./src/setup/index.ts"]
 }
