--- a/packages/moment-date-adapter/tsconfig.json
+++ b/packages/moment-date-adapter/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     // "rootDir": "src",
     "outDir": "build/main",
-    "declarationDir": "build/main"
+    "declarationDir": "build/main",
+    "allowSyntheticDefaultImports": true
   },
   "files": ["./src/index.ts", "./src/setup/index.ts"]
 }
