--- a/packages/luxon-date-adapter/tsconfig.module.json
+++ b/packages/luxon-date-adapter/tsconfig.module.json
@@ -2,8 +2,8 @@
   "extends": "./tsconfig",
   "compilerOptions": {
     "target": "es2015",
+    "module": "es2015",
     "outDir": "build/es2015",
-    "declarationDir": "build/es2015",
-    "module": "es2015"
+    "declarationDir": "build/es2015"
   }
 }
