fix: add all side effect declarations to each module's main package.json
fixes #37

--- a/packages/joda-date-adapter/package.json
+++ b/packages/joda-date-adapter/package.json
@@ -18,7 +18,10 @@
     "javascript",
     "typescript"
   ],
-  "sideEffects": false,
+  "sideEffects": [
+    "./umd/setup.js",
+    "./es2015/setup.js"
+  ],
   "main": "./umd/main.js",
   "module": "./es2015/main.js",
   "engines": {
