--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   ],
   "scripts": {
     "postinstall": "rm -rf node_modules/@rschedule",
-    "pub": "yarn test && yarn lerna version && yarn build && yarn lerna publish --contents build",
+    "pub": "yarn test && yarn lerna version && yarn build && yarn lerna publish from-git --yes --contents build",
+    "prebuild": "yarn --cwd='./packages/core' build",
     "build": "run-p build:*",
     "build:ical-tools": "yarn --cwd='./packages/ical-tools' build",
     "build:joda-date-adapter": "yarn --cwd='./packages/joda-date-adapter' build",
