--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "build:recurrence-rules-resolver": "yarn --cwd='./packages/recurrence-rules-resolver' build",
     "build:rule-tools": "yarn --cwd='./packages/rule-tools' build",
     "build:standard-date-adapter": "yarn --cwd='./packages/standard-date-adapter' build",
-    "test": "yarn test:core && yarn test:joda-date-adapter && yarn test:luxon-date-adapter && yarn test:moment-date-adapter && yarn test:moment-tz-date-adapter && yarn test:recurrence-rules-resolver && yarn test:standard-date-adapter",
+    "test": "yarn test:core && yarn test:joda-date-adapter && yarn test:luxon-date-adapter && yarn test:moment-date-adapter && yarn test:moment-tz-date-adapter && yarn test:recurrence-rules-resolver && yarn test:standard-date-adapter && yarn test:dayjs-date-adapter",
     "test:core": "yarn --cwd='./packages/core' test --ci --verbose false --collectCoverage false",
+    "test:dayjs-date-adapter": "yarn --cwd='./packages/dayjs-date-adapter' test --ci --verbose false --collectCoverage false",
     "test:joda-date-adapter": "yarn --cwd='./packages/joda-date-adapter' test --ci --verbose false --collectCoverage false",
     "test:luxon-date-adapter": "yarn --cwd='./packages/luxon-date-adapter' test --ci --verbose false --collectCoverage false",
     "test:moment-date-adapter": "yarn --cwd='./packages/moment-date-adapter' test --ci --verbose false --collectCoverage false",
@@ -45,6 +46,7 @@
     "@types/moment-timezone": "^0.5.7",
     "@types/ncp": "^2.0.1",
     "@types/node": "^10.0.3",
+    "dayjs": "^1.8.28",
     "ical.js": "^1.3.0",
     "jest": "^24.0.0",
     "jest-cli": "^24.0.0",
