--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "pub": "yarn test && yarn lerna version && yarn build && yarn lerna publish from-git --yes --contents build",
     "pubcanary": "yarn test && yarn lerna version --preid next -c && yarn build && yarn lerna publish from-git --yes --contents build",
     "prebuild": "yarn --cwd='./packages/core' build",
-    "build": "run-p build:*",
+    "build": "run-s build:*",
     "build:ical-tools": "yarn --cwd='./packages/ical-tools' build",
     "build:dayjs-date-adapter": "yarn --cwd='./packages/dayjs-date-adapter' build",
     "build:joda-date-adapter": "yarn --cwd='./packages/joda-date-adapter' build",
