--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "module": "es2015",
     "lib": ["es2017", "dom"],
     "strict": true,
+    "forceConsistentCasingInFileNames": true,
     "declaration": true,
     "sourceMap": false,
     "declarationMap": false,
