--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   ],
   "scripts": {
     "postinstall": "rm -rf node_modules/@rschedule",
-    "pub": "yarn test && yarn lerna version && yarn build && yarn lerna publish from-git --yes --contents build",
-    "pubcanary": "yarn test && yarn lerna version --preid next -c && yarn build && yarn lerna publish from-git --yes --dist-tag next --contents build",
+    "pub": "yarn test && yarn lerna version --no-push && yarn build && yarn lerna publish from-git --yes --contents build",
+    "pubcanary": "yarn test && yarn lerna version --preid next -c --no-push && yarn build && yarn lerna publish from-git --yes --dist-tag next --contents build",
     "prebuild": "yarn --cwd='./packages/core' build",
     "build": "run-s build:*",
     "build:ical-tools": "yarn --cwd='./packages/ical-tools' build",
