feat: support luxon v1 and v2 fixes #64

--- a/packages/luxon-date-adapter/tsconfig.json
+++ b/packages/luxon-date-adapter/tsconfig.json
@@ -1,9 +1,3 @@
 {
-  "extends": "../../tsconfig",
-  "compilerOptions": {
-    // "rootDir": "src",
-    "outDir": "build/umd",
-    "declarationDir": "build/umd"
-  },
-  "files": ["./src/index.ts", "./src/setup/index.ts"]
+  "extends": "./tsconfig-v1"
 }
