fix(luxon-date-adapter): correct setup package.json paths fixes #67

--- a/packages/luxon-date-adapter/src/v1/setup/package.json
+++ b/packages/luxon-date-adapter/src/v1/setup/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rschedule/luxon-date-adapter/v1/setup",
-  "main": "../umd/v1-setup.js",
-  "module": "../es2015/v1-setup.js",
+  "main": "../../umd/v1-setup.js",
+  "module": "../../es2015/v1-setup.js",
   "sideEffects": true
 }
