--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lerna": "^3.0.1",
     "luxon": "npm:luxon@^1.3.3",
     "luxon-v2": "npm:luxon@^2.0.2",
+    "mockdate": "^3.0.5",
     "moment": "^2.0.0",
     "moment-timezone": "^0.5.21",
     "ncp": "^2.0.0",
